--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -1081,8 +1081,8 @@
     "for i in range(int(n_tracks_train)):\n",
     "\n",
     "    mask_per, mask_har, track, track_per, track_har, est_per, est_har = apply_model(i, model, batch_size, n_window, n_fft, hop_length, size, stride, normalization = normalization, pct_limiar = pct_limiar)\n",
-    "    #reference = np.array([track_per.reshape(-1,1),track_har.reshape(-1,1)]) #harmonic reference is just harmonic target\n",
-    "    reference = np.array([track_per.reshape(-1,1),(track-track_per).reshape(-1,1)]) #harmonic reference is everything else drums\n",
+    "    reference = np.array([track_per.reshape(-1,1),track_har.reshape(-1,1)]) #harmonic reference is just harmonic target\n",
+    "    #reference = np.array([track_per.reshape(-1,1),(track-track_per).reshape(-1,1)]) #harmonic reference is everything else drums\n",
     "    estimated = np.array([est_per.reshape(-1,1),est_har.reshape(-1,1)])\n",
     "\n",
     "    sdr,isr,sir,sar,perm = museval.metrics.bss_eval(reference, estimated, window = np.inf)\n",
@@ -1118,8 +1118,8 @@
     "for i in range(int(n_tracks_validation)):\n",
     "\n",
     "    mask_per, mask_har, track, track_per, track_har, est_per, est_har = apply_model(i+100, model, batch_size, n_window, n_fft, hop_length, size, stride, normalization = normalization, pct_limiar = pct_limiar)\n",
-    "    #reference = np.array([track_per.reshape(-1,1),track_har.reshape(-1,1)]) #harmonic reference is just harmonic target\n",
-    "    reference = np.array([track_per.reshape(-1,1),(track-track_per).reshape(-1,1)]) #harmonic reference is everything else drums\n",
+    "    reference = np.array([track_per.reshape(-1,1),track_har.reshape(-1,1)]) #harmonic reference is just harmonic target\n",
+    "    #reference = np.array([track_per.reshape(-1,1),(track-track_per).reshape(-1,1)]) #harmonic reference is everything else drums\n",
     "    estimated = np.array([est_per.reshape(-1,1),est_har.reshape(-1,1)])\n",
     "    \n",
     "    sdr,isr,sir,sar,perm = museval.metrics.bss_eval(reference, estimated, window = np.inf)\n",
